# AttributePainter

./: .gitignore  BUILDING_WINDOWS.md  CMakeLists.txt  README.md  STRUCTURE.md  build_log.txt  ci.yml  handle_debug.txt  nuke_log.txt
include/: AttributePainterOp.h  BrushSystem.h  MeshSampler.h  Types.h  Types_v101.h  USDColorWriter.h  UndoStack.h  ViewportBrushKnob.h
scripts/: build.bat  generate_stubs.ps1
src/: AttributePainterOp.cpp  BrushSystem.cpp  MeshSampler.cpp  USDColorWriter.cpp  UndoStack.cpp  ViewportBrushKnob.cpp  plugin.cpp
